fix (print): hide on mobile

--- a/themes/hugo-vinesh-theme/assets/scss/style.scss
+++ b/themes/hugo-vinesh-theme/assets/scss/style.scss
@@ -337,7 +337,7 @@ body {
   }
 
   .resume-actions {
-    width: 100%;
+    display: none;
   }
 
   .resume-actions-top,
